{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Normal",
            "id": "6a6c1420-0ab0-4be5-bf72-121997ccc6b9",
            "actions": [
                {
                    "name": "RunRightPress",
                    "type": "Button",
                    "id": "083995f4-5d25-4730-b4f7-89cd729a943e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RunRightRelease",
                    "type": "Button",
                    "id": "a3c65607-5991-4e55-ac9e-214acfae14b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "RunLeftPress",
                    "type": "Button",
                    "id": "59006861-5764-4ac2-94b9-66d92b0c613c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RunLeftRelease",
                    "type": "Button",
                    "id": "bdb2318f-9732-4d07-9128-686e5c4cb66e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpPress",
                    "type": "Button",
                    "id": "350629f8-805d-4128-8bec-97477df8f7ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpRelease",
                    "type": "Button",
                    "id": "22905d2a-4e11-4dd1-bb27-e0dd12c54115",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "aca6df08-fbf5-4516-9ab5-4895ea80d20a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "SlideLeftRelease",
                    "type": "Button",
                    "id": "df2984a9-a52b-426d-9646-e90e64e9b561",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "SlideLeftClick",
                    "type": "Button",
                    "id": "fde0bd46-07b5-46b0-ab65-fa5751614fef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "03045fd7-be13-457d-ba87-d5aa834d5c6b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunRightRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3d66683-1927-4d0f-b13d-174582c133be",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunRightPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7c7cdb7-a57f-4116-a2b9-2d5c0589128e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunLeftPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d10a64d0-3335-4487-a7f1-13c694803784",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunLeftRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b834117-776a-4d9f-ad82-0f9711f165bd",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85ddc11a-8e9c-44de-a5c5-9c627b4fd6d6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bf1d7f1-c25e-4864-ba0c-51826a9e65e0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33d09fc9-b6f9-4a66-9503-91ad7b38272e",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SlideLeftRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44cfbb94-1d9f-4115-b9d0-032bcbb7e1e0",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SlideLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}